--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "server",
+  "name": "workoutlogapp-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend server for WorkOutLogApp",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "compression": "^1.8.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.5.1",
+    "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0",
-    "morgan": "^1.10.0",
-    "stripe": "^18.2.1"
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.18.0",
+    "morgan": "^1.10.1",
+    "stripe": "^18.4.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
@@ -31,5 +32,7 @@
   "directories": {
     "test": "tests"
   },
-  "description": ""
+  "keywords": ["fitness", "workout", "api"],
+  "author": "Octavio Sanchez",
+  "license": "MIT"
 }
